--- a/Fix My Street/res/layout/details.xml
+++ b/Fix My Street/res/layout/details.xml
@@ -12,7 +12,7 @@
 		<TextView android:id="@+id/name_save" android:layout_width="fill_parent"
 			android:paddingTop="5dip" android:paddingLeft="5dip"
 			android:paddingRight="5dip" android:layout_height="wrap_content"
-			android:text="Short title for problem (you can add more later):" />
+			android:text="Kort og beskrivende tittel på problemet (du kan legge til flere detaljer senere):" />
 
 		<!-- Subject -->
 
@@ -21,7 +21,7 @@
 			android:padding="5dip">
 			<TextView android:id="@+id/subject_label"
 				android:layout_width="80sp" android:layout_height="24sp"
-				android:text="Title:" />
+				android:text="Tittel:" />
 			<EditText android:id="@+id/subject_text"
 				android:layout_width="fill_parent" android:layout_height="40sp"
 				android:singleLine="True" android:capitalize="sentences" />
@@ -30,13 +30,13 @@
 		<!-- And a name -->
 		<TextView android:id="@+id/name_save" android:layout_width="fill_parent"
 			android:paddingLeft="5dip" android:paddingRight="5dip"
-			android:layout_height="wrap_content" android:text="We'll save these for next time:" />
+			android:layout_height="wrap_content" android:text="Disse blir lagret til neste gang:" />
 
 		<LinearLayout android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:orientation="horizontal"
 			android:padding="5dip">
 			<TextView android:id="@+id/name_label" android:layout_width="80sp"
-				android:layout_height="24sp" android:text="Your name:" />
+				android:layout_height="24sp" android:text="Ditt navn:" />
 			<EditText android:id="@+id/name_text" android:layout_width="fill_parent"
 				android:layout_height="40sp" android:singleLine="True"
 				android:capitalize="words" />
@@ -49,14 +49,14 @@
 			android:padding="5dip">
 			<TextView android:id="@+id/email_label"
 				android:layout_width="80sp" android:layout_height="24sp"
-				android:text="Your email:" />
+				android:text="Din e-post:" />
 			<EditText android:id="@+id/email_text" android:layout_width="fill_parent"
 				android:layout_height="40sp" android:singleLine="True"
 				android:capitalize="none" />
 		</LinearLayout>
 
 		<Button android:id="@+id/submit_button" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:text="Save details"
+			android:layout_height="wrap_content" android:text="Lagre detaljer"
 			android:padding="5dip" />
 
 		<TextView android:layout_width="fill_parent"
