--- a/Fix My Street/res/layout/home.xml
+++ b/Fix My Street/res/layout/home.xml
@@ -9,11 +9,11 @@
 		android:layout_height="wrap_content" android:paddingTop="10dip">
 
 		<Button android:id="@+id/camera_button" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:text="Take photo"
+			android:layout_height="wrap_content" android:text="Ta bilde"
 			android:drawableRight="@drawable/add" />
 
 		<Button android:id="@+id/details_button" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:text="Add details"
+			android:layout_height="wrap_content" android:text="Legg til detaljer"
 			android:drawableRight="@drawable/add" android:paddingRight="10dip"
 			android:paddingLeft="10dip" />
 
@@ -23,10 +23,10 @@
 		<TextView android:paddingRight="10dip" android:paddingLeft="10dip"
 			android:layout_width="wrap_content" android:textColor="#87190f"
 			android:id="@+id/progress_text" android:layout_height="wrap_content"
-			android:text="Waiting for a GPS fix... Please make sure you can see the sky." />
+			android:text="Venter på GPS... Pass på at du kan se himmelen." />
 
 		<Button android:id="@+id/report_button" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:text="Report to Fix My Street"
+			android:layout_height="wrap_content" android:text="Rapporter til FiksGataMi"
 			android:paddingRight="10dip" android:paddingLeft="10dip" />
 
 
