--- a/Fix My Street/res/layout/success.xml
+++ b/Fix My Street/res/layout/success.xml
@@ -18,20 +18,20 @@
 		<TextView android:id="@+id/hello_text" android:layout_width="fill_parent"
 			android:paddingBottom="5dip" android:paddingTop="5dip"
 			android:paddingLeft="5dip" android:paddingRight="5dip"
-			android:layout_height="wrap_content" android:text="Now check your email!"
+			android:layout_height="wrap_content" android:text="Sjekk innboksen din!"
 			android:textStyle="bold" />
 
 		<TextView android:id="@+id/hello_text" android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:paddingBottom="5dip"
 			android:paddingTop="5dip" android:paddingLeft="5dip"
 			android:paddingRight="5dip"
-			android:text="You'll receive an email from us soon. Please click on the confirmation link, check the location carefully, and provide a few more details." />
+			android:text="Du vil motta en e-post fra oss snart. Vennligst klikk på lenken for å bekrefte, sjekk åstedet nøye og legg til noen flere detaljer." />
 
 		<TextView android:id="@+id/hello_text" android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:paddingBottom="5dip"
 			android:paddingTop="5dip" android:paddingLeft="5dip"
 			android:paddingRight="5dip"
-			android:text="If the email doesn't arrive within a few hours, please check your spam folder - sometimes the emails can be marked as spam." />
+			android:text="Hvis det ikke kommer noen e-post, sjekk om den kan ha blitt markert som søppelpost - noe som kan skje av og til." />
 
 		<TextView android:layout_width="fill_parent" android:layout_weight="1"
 			android:layout_height="wrap_content" android:text=" "
